First commited as before_63816_rev1