@@ -56,8 +56,7 @@ import org.eclipse.ui.progress.IJobRunnable;
  * @since 3.3
  *
  */
-public class TestBackgroundSaveEditor extends EditorPart implements
-		ISaveablesSource {
+public class TestBackgroundSaveEditor extends EditorPart implements ISaveablesSource {
 
 	public class MySaveable extends Saveable {
 
@@ -68,11 +67,10 @@ public class TestBackgroundSaveEditor extends EditorPart implements
 		@Override
 		public void doSave(IProgressMonitor monitor) throws CoreException {
 			SubMonitor subMonitor = SubMonitor.convert(monitor, 2);
-			IJobRunnable runnable = doSave(subMonitor.newChild(1), getSite());
-			if (runnable!=null) {
-				runnable.run(subMonitor.newChild(1));
+			IJobRunnable runnable = doSave(subMonitor.split(1), getSite());
+			if (runnable != null) {
+				runnable.run(subMonitor.split(1));
 			}
-			monitor.done();
 		}
 
 		@Override
@@ -170,7 +168,7 @@ public class TestBackgroundSaveEditor extends EditorPart implements
 		}
 
 		public void setDirty(boolean dirty) {
-			firePropertyChange("dirty", new Boolean(this.dirty), new Boolean(
+			firePropertyChange("dirty", Boolean.valueOf(this.dirty), Boolean.valueOf(
 					this.dirty = dirty));
 			getSite().getShell().getDisplay().syncExec(new Runnable(){
 				@Override
@@ -254,7 +252,7 @@ public class TestBackgroundSaveEditor extends EditorPart implements
 				dirtyObservable, null, null);
 		// IObservableValue inputAndOutputDiffer = new ComputedValue(realm) {
 		// protected Object calculate() {
-		// return new Boolean(!Util.equals(inputObservable.getValue(),
+		// return Boolean.valueOf(!Util.equals(inputObservable.getValue(),
 		// outputObservable.getValue()));
 		// }
 		// };
